--- a/src/frontend/destination_search/templates/home.html
+++ b/src/frontend/destination_search/templates/home.html
@@ -1,1 +1,14 @@
+{% extends "base.html" %}
+
+{% block title %}
+Home
+{% endblock %}
+
+{% block header %}
+Home
+{% endblock %}
+
+{% block content %}
 <h1>HomePage</h1>
+
+{% endblock %}
