--- a/src/frontend/destination_search/templates/list.html
+++ b/src/frontend/destination_search/templates/list.html
@@ -1,161 +1,133 @@
+{% extends "base.html" %}
 {% load my_tags %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Locations</title>
+{% block title %}
+Locations
+{% endblock %}
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+{% block header %}
+Locations
+{% endblock %}
 
-  {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
-</head>
-<body>
+{% block content %}
 
-  <div class="page">
+<!--- Filter form -->
+<div class="filters-container">
+  <form action="" method="get">
+    {{ filterset.form.as_p }}
+    <input type="submit" />
+  </form>
+</div>
 
-    <!--- Header -->
-    <div class="header-container">
-      <h1>Locations</h1>
-    </div>
+<!--- Results -->
+<div class="results-container">
 
-    <!--- Content -->
-    <div class="content-container">
-
-      <!--- Filter form -->
-      <div class="filters-container">
-        <form action="" method="get">
-          {{ filterset.form.as_p }}
-          <input type="submit" />
-        </form>
-      </div>
-
-      <!--- Results -->
-      <div class="results-container">
-
-        <!--- Sort-by dropdown -->
-        <div class="sort-container">
-          <div class="sort-label">Sort by:</div>
-          <form action="" method="get" id="sortForm" style="display: flex; align-items: center;">
-            <select class="form-control ml-2" id="sort" name="sort" onchange="document.getElementById('sortForm').submit();">
-              <option value="relevance_desc" {% if current_sort_order == 'relevance_desc' %}selected{% endif %}>Relevance (descending)</option>
-              <option value="distance_asc" {% if current_sort_order == 'distance_asc' %}selected{% endif %}>Distance to start (ascending)</option>
-              <option value="distance_desc" {% if current_sort_order == 'distance_desc' %}selected{% endif %}>Distance to start (descending)</option>
-              <option value="name_asc" {% if current_sort_order == 'name_asc' %}selected{% endif %}>Name (ascending)</option>
-              <option value="name_desc" {% if current_sort_order == 'name_desc' %}selected{% endif %}>Name (descending)</option>
-            </select>
-          </form>
-        </div>
-
-        <!--- List of locations -->
-        <div class="location-list-container">
-          {% for location in object_list %}
-
-            <div class="location-list-item-container">
-
-              <div class="location-list-item-image-container">
-                <a href="{% url 'location_detail' location_id=location.location_id %}">
-                  <img src="https://upload.wikimedia.org/wikipedia/commons/3/39/Willmette_how.jpg" alt="{{ location.city }} image" height="100px" width="100px">
-                </a>
-              </div>
-              
-              <div class="location-list-item-info-container">
-                <div class="location-list-item-title">
-                  <a href="{% url 'location_detail' location_id=location.location_id %}">
-                    <span class="location-list-item-city-name"> {{ location.city }} </span>
-                  </a>
-                  <span class="location-list-item-distance-to-start">({{ location.distance_to_start|floatformat:2 }} km)</span>
-                </div>
-                <br>
-                <div class=".location-list-item-country-name">
-                  <img src="https://flagsapi.com/{{ location.country_code }}/flat/24.png" alt="{{ location.country }} flag">
-                  {{ location.country }}
-                </div>
-
-              </div>
-              <div class="location-list-item-relevance-container">
-                <div class="location-list-item-relevance">{{ location.relevance|floatformat:1  }}</div>
-              </div>
-            </div>
-          {% endfor %}
-        </div>
-
-        {% load my_tags %}
-
-        <!-- Pagination controls -->
-        <div class="pagination-container">
-          <nav aria-label="Page navigation">
-            <ul class="pagination">
-              {% if object_list.has_previous %}
-                <li class="page-item">
-                  <a class="page-link" href="?{% param_replace page=object_list.previous_page_number %}" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                  </a>
-                </li>
-              {% else %}
-                <li class="page-item disabled">
-                  <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                  </a>
-                </li>
-              {% endif %}
-
-              {% if object_list.number > 2 %}
-                <li class="page-item"><a class="page-link" href="?{% param_replace page=1 %}">1</a></li>
-              {% endif %}
-
-              {% if object_list.number > 3 %}
-                <li class="page-item disabled"><a class="page-link" href="#">...</a></li>
-              {% endif %}
-
-              {% for i in object_list.paginator.page_range %}
-                {% if i >= object_list.number|add:"-1" and i <= object_list.number|add:"1" %}
-                  <li class="page-item {% if object_list.number == i %}active{% endif %}"><a class="page-link" href="?{% param_replace page=i %}">{{ i }}</a></li>
-                {% endif %}
-              {% endfor %}
-
-              {% if object_list.number < object_list.paginator.num_pages|add:"-2" %}
-                <li class="page-item disabled"><a class="page-link" href="#">...</a></li>
-              {% endif %}     
-
-              {% if object_list.number < object_list.paginator.num_pages|add:"-1" %}
-                <li class="page-item"><a class="page-link" href="?{% param_replace page=object_list.paginator.num_pages %}">{{ object_list.paginator.num_pages }}</a></li>
-              {% endif %}
-
-              {% if object_list.has_next %}
-                <li class="page-item">
-                  <a class="page-link" href="?{% param_replace page=object_list.next_page_number %}" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                  </a>
-                </li>
-              {% else %}
-                <li class="page-item disabled">
-                  <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                  </a>
-                </li>
-              {% endif %}
-            </ul>
-          </nav>
-        </div>
-
-      </div>
-
-    </div>
-
-    <!--- Footer -->
-    <div class="footer-container">
-      <p>This is the footer</p>
-    </div>
-
+  <!--- Sort-by dropdown -->
+  <div class="sort-container">
+    <div class="sort-label">Sort by:</div>
+    <form action="" method="get" id="sortForm" style="display: flex; align-items: center;">
+      <select class="form-control ml-2" id="sort" name="sort" onchange="document.getElementById('sortForm').submit();">
+        <option value="relevance_desc" {% if current_sort_order == 'relevance_desc' %}selected{% endif %}>Relevance (descending)</option>
+        <option value="distance_asc" {% if current_sort_order == 'distance_asc' %}selected{% endif %}>Distance to start (ascending)</option>
+        <option value="distance_desc" {% if current_sort_order == 'distance_desc' %}selected{% endif %}>Distance to start (descending)</option>
+        <option value="name_asc" {% if current_sort_order == 'name_asc' %}selected{% endif %}>Name (ascending)</option>
+        <option value="name_desc" {% if current_sort_order == 'name_desc' %}selected{% endif %}>Name (descending)</option>
+      </select>
+    </form>
   </div>
-  
 
-  <!-- jQuery and Bootstrap Bundle (includes Popper) -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+  <!--- List of locations -->
+  <div class="location-list-container">
+    {% for location in object_list %}
+
+      <div class="location-list-item-container">
+
+        <div class="location-list-item-image-container">
+          <a href="{% url 'location_detail' location_id=location.location_id %}">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/39/Willmette_how.jpg" alt="{{ location.city }} image" height="100px" width="100px">
+          </a>
+        </div>
+        
+        <div class="location-list-item-info-container">
+          <div class="location-list-item-title">
+            <a href="{% url 'location_detail' location_id=location.location_id %}">
+              <span class="location-list-item-city-name"> {{ location.city }} </span>
+            </a>
+            <span class="location-list-item-distance-to-start">({{ location.distance_to_start|floatformat:2 }} km)</span>
+          </div>
+          <br>
+          <div class=".location-list-item-country-name">
+            <img src="https://flagsapi.com/{{ location.country_code }}/flat/24.png" alt="{{ location.country }} flag">
+            {{ location.country }}
+          </div>
+
+        </div>
+        <div class="location-list-item-relevance-container">
+          <div class="location-list-item-relevance">{{ location.relevance|floatformat:1  }}</div>
+        </div>
+      </div>
+    {% endfor %}
+  </div>
+
+  {% load my_tags %}
+
+  <!-- Pagination controls -->
+  <div class="pagination-container">
+    <nav aria-label="Page navigation">
+      <ul class="pagination">
+        {% if object_list.has_previous %}
+          <li class="page-item">
+            <a class="page-link" href="?{% param_replace page=object_list.previous_page_number %}" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+        {% else %}
+          <li class="page-item disabled">
+            <a class="page-link" href="#" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+        {% endif %}
+
+        {% if object_list.number > 2 %}
+          <li class="page-item"><a class="page-link" href="?{% param_replace page=1 %}">1</a></li>
+        {% endif %}
+
+        {% if object_list.number > 3 %}
+          <li class="page-item disabled"><a class="page-link" href="#">...</a></li>
+        {% endif %}
+
+        {% for i in object_list.paginator.page_range %}
+          {% if i >= object_list.number|add:"-1" and i <= object_list.number|add:"1" %}
+            <li class="page-item {% if object_list.number == i %}active{% endif %}"><a class="page-link" href="?{% param_replace page=i %}">{{ i }}</a></li>
+          {% endif %}
+        {% endfor %}
+
+        {% if object_list.number < object_list.paginator.num_pages|add:"-2" %}
+          <li class="page-item disabled"><a class="page-link" href="#">...</a></li>
+        {% endif %}     
+
+        {% if object_list.number < object_list.paginator.num_pages|add:"-1" %}
+          <li class="page-item"><a class="page-link" href="?{% param_replace page=object_list.paginator.num_pages %}">{{ object_list.paginator.num_pages }}</a></li>
+        {% endif %}
+
+        {% if object_list.has_next %}
+          <li class="page-item">
+            <a class="page-link" href="?{% param_replace page=object_list.next_page_number %}" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        {% else %}
+          <li class="page-item disabled">
+            <a class="page-link" href="#" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        {% endif %}
+      </ul>
+    </nav>
+  </div>
+
+</div>
+
+{% endblock %}
