Input previous locations on home page

--- a/src/frontend/destination_search/destinations/static/css/styles.css
+++ b/src/frontend/destination_search/destinations/static/css/styles.css
@@ -139,3 +139,11 @@
     right: 20px;
     font-size: 2em;
 }
+
+
+/* home page */
+
+.home-prev-locations-container {
+    background-color: lightblue;
+    width: 80%;
+}
