--- a/src/frontend/destination_search/templates/base.html
+++ b/src/frontend/destination_search/templates/base.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
 
+    <!-- Django-Select2 CSS -->
+    {{ form.media.css }}<style> input, select {width: 100%} </style>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 
@@ -31,10 +34,16 @@
         </div>
 
     </div>
-    
 
-    <!-- jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Django-Select2 JavaScript -->
+    {{ form.media.js }}
+    <!-- <script src="{% static 'django_select2/django_select2.js' %}"></script> -->
+
+    <!-- Bootstrap Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
