--- a/src/frontend/destination_search/templates/list.html
+++ b/src/frontend/destination_search/templates/list.html
@@ -42,7 +42,7 @@ Locations
 
   <!--- List of locations -->
   <div class="location-list-container">
-    {% for location in object_list %}
+    {% for location in location_list %}
 
       <div class="location-list-item-container">
 
@@ -79,9 +79,9 @@ Locations
   <div class="pagination-container">
     <nav aria-label="Page navigation">
       <ul class="pagination">
-        {% if object_list.has_previous %}
+        {% if location_list.has_previous %}
           <li class="page-item">
-            <a class="page-link" href="?{% param_replace page=object_list.previous_page_number %}" aria-label="Previous">
+            <a class="page-link" href="?{% param_replace page=location_list.previous_page_number %}" aria-label="Previous">
               <span aria-hidden="true">&laquo;</span>
             </a>
           </li>
@@ -93,31 +93,31 @@ Locations
           </li>
         {% endif %}
 
-        {% if object_list.number > 2 %}
+        {% if location_list.number > 2 %}
           <li class="page-item"><a class="page-link" href="?{% param_replace page=1 %}">1</a></li>
         {% endif %}
 
-        {% if object_list.number > 3 %}
+        {% if location_list.number > 3 %}
           <li class="page-item disabled"><a class="page-link" href="#">...</a></li>
         {% endif %}
 
-        {% for i in object_list.paginator.page_range %}
-          {% if i >= object_list.number|add:"-1" and i <= object_list.number|add:"1" %}
-            <li class="page-item {% if object_list.number == i %}active{% endif %}"><a class="page-link" href="?{% param_replace page=i %}">{{ i }}</a></li>
+        {% for i in location_list.paginator.page_range %}
+          {% if i >= location_list.number|add:"-1" and i <= location_list.number|add:"1" %}
+            <li class="page-item {% if location_list.number == i %}active{% endif %}"><a class="page-link" href="?{% param_replace page=i %}">{{ i }}</a></li>
           {% endif %}
         {% endfor %}
 
-        {% if object_list.number < object_list.paginator.num_pages|add:"-2" %}
+        {% if location_list.number < location_list.paginator.num_pages|add:"-2" %}
           <li class="page-item disabled"><a class="page-link" href="#">...</a></li>
         {% endif %}     
 
-        {% if object_list.number < object_list.paginator.num_pages|add:"-1" %}
-          <li class="page-item"><a class="page-link" href="?{% param_replace page=object_list.paginator.num_pages %}">{{ object_list.paginator.num_pages }}</a></li>
+        {% if location_list.number < location_list.paginator.num_pages|add:"-1" %}
+          <li class="page-item"><a class="page-link" href="?{% param_replace page=location_list.paginator.num_pages %}">{{ location_list.paginator.num_pages }}</a></li>
         {% endif %}
 
-        {% if object_list.has_next %}
+        {% if location_list.has_next %}
           <li class="page-item">
-            <a class="page-link" href="?{% param_replace page=object_list.next_page_number %}" aria-label="Next">
+            <a class="page-link" href="?{% param_replace page=location_list.next_page_number %}" aria-label="Next">
               <span aria-hidden="true">&raquo;</span>
             </a>
           </li>
