--- a/src/frontend/destination_search/templates/about.html
+++ b/src/frontend/destination_search/templates/about.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block title %}
-{{ location.city }} - Location Detail
+About
 {% endblock %}
 
 {% block main %}
-<h1>{{ location.city }}</h1>
 
+<img src="https://i.makeagif.com/media/3-13-2021/p4_GNu.gif" alt="Gif Image">
 {% endblock %}
