--- a/src/frontend/destination_search/templates/list.html
+++ b/src/frontend/destination_search/templates/list.html
@@ -2,14 +2,10 @@
 {% load my_tags %}
 
 {% block title %}
-Locations
+Results
 {% endblock %}
 
-{% block header %}
-Locations
-{% endblock %}
-
-{% block content %}
+{% block main %}
 
 <!--- Filter form -->
 <div class="filters-container">
