--- a/src/frontend/destination_search/templates/base.html
+++ b/src/frontend/destination_search/templates/base.html
@@ -14,23 +14,62 @@
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 </head>
-<body>
+<body class="{{ request.path|slugify }}">
 
     <div class="page">
 
         <!--- Header -->
         <div class="header-container">
-            <h1>{% block header %}{% endblock %}</h1>
+            <div class="header-content-container content-container">
+                {% block header %}
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="/">
+                        <img src="https://www.svgrepo.com/show/58117/airplane-travelling-around-earth.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+                        DestinationFinder
+                    </a>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item {% if request.path == '/discover' %}active-link{% endif %}">
+                                <a class="nav-link" href="/discover">
+                                    Discover
+                                    <span class="tooltip-text">Discover new places</span>
+                                </a>
+                            </li>
+                            <li class="nav-item {% if request.path == '/search' %}active-link{% endif %}">
+                                <a class="nav-link" href="/search">
+                                    Search
+                                    <span class="tooltip-text">Search for a destination</span>
+                                </a>
+                            </li>
+                            <li class="nav-item {% if request.path == '/compare' %}active-link{% endif %}">
+                                <a class="nav-link" href="/compare">
+                                    Compare
+                                    <span class="tooltip-text">Compare different destinations</span>
+                                </a>
+                            </li>
+                            <li class="nav-item {% if request.path == '/about' %}active-link{% endif %}">
+                                <a class="nav-link" href="/about">
+                                    About
+                                    <span class="tooltip-text">Learn more about the project</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+                {% endblock %}
+            </div>
         </div>
 
-        <!--- Content -->
-        <div class="content-container">
-            {% block content %}{% endblock %}
+        <!--- Main part -->
+        <div class="main-container content-container">
+            {% block main %}{% endblock %}
         </div>
 
         <!--- Footer -->
         <div class="footer-container">
-            <p>This is the footer</p>
+            <div class="footer-content-container content-container">
+                A very nice product by Max Mohr, Lukas Schick, Felix Koehn and Jakob Zgonc. Unfortunately, no money to reserve any rights.
+            </div>
         </div>
 
     </div>
@@ -44,6 +83,19 @@
 
     <!-- Bootstrap Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', (event) => {
+            const navItems = document.querySelectorAll('.nav-item a');
+            const currentPath = window.location.pathname.replace(/\/$/, '');
+
+            navItems.forEach((navItem) => {
+                if (navItem.getAttribute('href').replace(/\/$/, '') === currentPath) {
+                    navItem.classList.add('active-link');
+                }
+            });
+        });
+    </script>
 
 </body>
 </html>
