--- a/src/frontend/destination_search/templates/discover.html
+++ b/src/frontend/destination_search/templates/discover.html
@@ -6,21 +6,34 @@ Discover destinations
 
 {% block main %}
 
-<div class="discover-prev-locations-container">
-    <div class="discover-prev-locations-text">
-        <p>Search for locations you have previously visited. You can select multiple locations.</p>
+<div class="discover-form-container">
+    <div class="discover-form-introtext">
+        <p>For some of our dimension scores we need some information from you. In addition, we use this input to compute the relevance of the various destinations based on your characteristics. <a href="/about">Learn more.</a> </p>
     </div>
-
-    <div class="discover-form-container">
-        <form method="post">
-            {% csrf_token %}
-            {% for field in form %}
-                {{ field.errors }}
-                {{ field }}
-            {% endfor %}
-            <input type="submit" value="Go">
-        </form>
-    </div>
+    <form method="post">
+        {% csrf_token %}
+        <div class="form-group question-box">
+            <label for="{{ form.start_location.id_for_label }}">{{ form.start_location.help_text }}</label>
+            {{ form.start_location.errors }}
+            {{ form.start_location.as_widget }}
+        </div>
+        <div class="form-group question-box">
+            <label for="{{ form.start_date.id_for_label }}">{{ form.start_date.help_text }}</label>
+            {{ form.start_date.errors }}
+            {{ form.start_date.as_widget }}
+        </div>
+        <div class="form-group question-box">
+            <label for="{{ form.end_date.id_for_label }}">{{ form.end_date.help_text }}</label>
+            {{ form.end_date.errors }}
+            {{ form.end_date.as_widget }}
+        </div>
+        <div class="form-group question-box">
+            <label for="{{ form.previous_locations.id_for_label }}">{{ form.previous_locations.help_text }}</label>
+            {{ form.previous_locations.errors }}
+            {{ form.previous_locations.as_widget }}
+        </div>
+        <input type="submit" value="Go" class="submit-button">
+    </form>
 </div>
 
 {% endblock %}
