--- a/src/frontend/destination_search/destinations/static/css/styles.css
+++ b/src/frontend/destination_search/destinations/static/css/styles.css
@@ -260,7 +260,7 @@
     margin: 80px 0px;
 }
 
-.discover-form-infotext {
+.discover-form-introtext {
     margin-bottom: 10px;
     background-color: lightpink;
     margin-bottom: 10px;
@@ -287,6 +287,24 @@
     margin-left: auto;
     margin-top: 10px;
     font-weight: bold;
+}
+
+input[name="date_range"] {
+    width: 100%;
+    height: 37px;
+    display: block;
+    top: 0;
+    left: 0;
+    position: relative;
+    padding: 0px 5px;
+}
+
+.discover .select2.select2-container.select2-container--default {
+    width: 100% !important;
+}
+
+.select2-dropdown {
+    z-index: 100000;
 }
 
 /* Search page --------------------------------------------------------------*/
