--- a/src/frontend/destination_search/templates/discover.html
+++ b/src/frontend/destination_search/templates/discover.html
@@ -18,14 +18,9 @@ Discover destinations
             {{ form.start_location.as_widget }}
         </div>
         <div class="form-group question-box">
-            <label for="{{ form.start_date.id_for_label }}">{{ form.start_date.help_text }}</label>
-            {{ form.start_date.errors }}
-            {{ form.start_date.as_widget }}
-        </div>
-        <div class="form-group question-box">
-            <label for="{{ form.end_date.id_for_label }}">{{ form.end_date.help_text }}</label>
-            {{ form.end_date.errors }}
-            {{ form.end_date.as_widget }}
+            <label for="{{ form.date_range.id_for_label }}">{{ form.date_range.help_text }}</label>
+            {{ form.date_range.errors }}
+            {{ form.date_range.as_widget }}
         </div>
         <div class="form-group question-box">
             <label for="{{ form.previous_locations.id_for_label }}">{{ form.previous_locations.help_text }}</label>
