--- a/src/frontend/destination_search/templates/discover.html
+++ b/src/frontend/destination_search/templates/discover.html
@@ -16,6 +16,8 @@ Discover destinations
             <label for="{{ form.start_location.id_for_label }}">{{ form.start_location.help_text }}</label>
             {{ form.start_location.errors }}
             {{ form.start_location.as_widget }}
+            {{ form.start_location_lat.as_widget }}
+            {{ form.start_location_lon.as_widget }}
         </div>
         <div class="form-group question-box">
             <label for="{{ form.date_range.id_for_label }}">{{ form.date_range.help_text }}</label>
@@ -31,4 +33,33 @@ Discover destinations
     </form>
 </div>
 
+{% endblock %}
+
+{% block scripts %}
+<script>
+$(document).ready(function() {
+    $('#id_start_location').autocomplete({
+        source: function(request, response) {
+            $.get('https://nominatim.openstreetmap.org/search', {
+                q: request.term,
+                format: 'json'
+            }, function(data) {
+                response($.map(data, function(item) {
+                    return {
+                        label: item.display_name,
+                        value: item.display_name,
+                        lat: item.lat,
+                        lon: item.lon
+                    };
+                }));
+            });
+        },
+        select: function(event, ui) {
+            $('#id_start_location_lat').val(ui.item.lat);
+            $('#id_start_location_lon').val(ui.item.lon);
+        },
+        minLength: 2
+    });
+});
+</script>
 {% endblock %}
