--- a/src/frontend/destination_search/templates/list.html
+++ b/src/frontend/destination_search/templates/list.html
@@ -45,7 +45,7 @@ Results
 
         <div class="location-list-item-image-container">
           <a href="{% url 'location_detail' location_id=location.location_id %}">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/3/39/Willmette_how.jpg" alt="{{ location.city }} image" height="100px" width="100px">
+            <img src=" {{location.thumbnail_url }} " alt="{{ location.city }} image" height="100px" width="100px">
           </a>
         </div>
         
